# data-tech-stats

./: .gitignore  README.md  pytest.ini  setup_venv.ps1
backend/aggregate/: lambda_function.py  requirements.txt
backend/aggregate/agg_core/: config.py  primary_languages.py  (+5 more)
backend/aggregate_repo_stats/: lambda_function.py
backend/api/: lambda_function.py  requirements.txt
backend/extract/: lambda_function.py  requirements.txt
backend/layers/common_layer/python/: pyproject.toml
backend/layers/common_layer/python/dts_utils/: s3_utils.py
diagrams/: dts-api-diagram.drawio  dts-etl-diagram.drawio
frontend/: index.html  style.css
frontend/js/: api.js  config.example.js  main.js
src/aggregate_repo_counts/: config.py  lambda_function.py  utils.py
src/aggregate_repo_stats/: config.py  lambda_function.py  primary_languages.py  process_repos.py  repo_comparison.py  repo_counts.py  repo_list.py  types.py  utils.py
src/data_tech_stats_api/: config.py  lambda_function.py  repo_comparison.py  utils.py
src/extract_github_data/: config.py  extract.py  lambda_function.py  repo_registry.py  utils.py
src/repo_counts_api/: config.py  lambda_function.py  utils.py
tests/: test_parse_repo_data.py
tests/aggregate_repo_counts/: test_utils.py
tests/repo_counts_api/: test_utils.py
tests/test_aggregate_repo_stats/: test_primary_languages.py  test_repo_comparison.py  test_repo_list.py  test_utils.py
tests/test_data_tech_stats_api/: test_repo_comparison.py
tests/test_extract_github_data/: test_extract_utils.py  test_parse_repo_data.py  test_repo_registry.py
(+15 files in other folders)
