[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-utils-layer"
version = "0.1.0"
description = "Shared S3 and logging utilities for Lambda functions"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.116",
]

[tool.setuptools]
packages = {find = {where = ["."]}}